# PhagoPred

./: .gitignore  README.md  SETTINGS.py  conda_requirements.txt  environment.yml  memory.txt  requirements.txt  results.csv
PhagoPred/: GUI.py  SETTINGS.py  pyproject.toml  run_all.py
PhagoPred/Display/: save.py  view.py
PhagoPred/causal_analysis/: classical_analysis.py  data_loading.py  examples.py  fcit.py  main.py  multivariate_exploration.py  neural_gc.py
PhagoPred/cellpose_segmentation/: eval.py  kfold.py  segment.py  threshold_epi.py  train.py
PhagoPred/detectron_segmentation/: __init__.py  eval.py  fine_tune_class.py  kfold.py  montages_from_fine_tune_class.py  segment.py  train.py
PhagoPred/display/: napari_GUI.py  napari_GUI_2.py  plots.py  save.py  view.py
PhagoPred/feature_extraction/: batch_extract_features.py  batch_extract_features_no_epi.py  clean_features.py  death_frames_hyperparameter_search.py  detect_phagocytosis.py  extract_features.py  features.py  pca_kmeans_fitting.py  phagocytosis.py
PhagoPred/napari_multitools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
PhagoPred/napari_plugins/: napari.yaml
PhagoPred/population_analysis/: fitting.py  plots.py
PhagoPred/prediction/: data_loader.py  dataloader.py  datasets.py  decision_tree.py  lstm_attention.py
PhagoPred/segmentation/: segment.py  train.py
PhagoPred/survival_analysis/: train.py  validate.py
PhagoPred/survival_v2/: DATASET_COMPARISON_GUIDE.md  README.md  __init__.py  example_usage.py  main.py
PhagoPred/tests/: test_features.py  (+1 more)
(+637 files in other folders)
